src/test/ui/issue-12187-2.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-12187-2.rs:16:10
   |
16 |     let &v = new();
   |         -^
   |         ||
   |         |cannot infer type for `_`
   |         consider giving the pattern a type

error: aborting due to previous error

